@@ -1,6 +1,8 @@
 1.0.5 (10/30/13)
   *Fixed some issues related to the custom color option.
   *Fixed missing Drupal links in node--article.tpl.
+  *Added breadcrumbs option.
+  *"Search" region changed to "Header Search", now properly utilized.
 
 1.0.4 (10/21/13)
   *Renamed "menu" region "header_menu" for block/region template specificity.
